src/snapshots/hugr_qir__rotation__test__emit_all_ops@llvm14_0.snap
---
source: src/rotation.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [47 x i8] c"tket2.rotation.from_halfturns_unchecked failed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define void @_hl.main.1(double %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = fcmp oeq double %0, 0x7FF0000000000000
  %2 = fcmp oeq double %0, 0xFFF0000000000000
  %3 = fcmp uno double %0, 0.000000e+00
  %4 = or i1 %1, %2
  %5 = or i1 %4, %3
  %6 = xor i1 %5, true
  br i1 %6, label %9, label %7

7:                                                ; preds = %entry_block
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template, i32 0, i32 0), i32 1, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @0, i32 0, i32 0))
  call void @abort()
  unreachable

9:                                                ; preds = %entry_block
  %10 = fcmp oeq double %0, 0x7FF0000000000000
  %11 = fcmp oeq double %0, 0xFFF0000000000000
  %12 = fcmp uno double %0, 0.000000e+00
  %13 = or i1 %10, %11
  %14 = or i1 %13, %12
  %15 = xor i1 %14, true
  %16 = insertvalue { double } undef, double %0, 0
  %17 = insertvalue { i32, {}, { double } } { i32 1, {} poison, { double } poison }, { double } %16, 2
  %18 = select i1 %15, { i32, {}, { double } } %17, { i32, {}, { double } } { i32 0, {} undef, { double } poison }
  %19 = extractvalue { i32, {}, { double } } %18, 0
  switch i32 %19, label %20 [
    i32 1, label %22
  ]

20:                                               ; preds = %9
  %21 = extractvalue { i32, {}, { double } } %18, 1
  br label %cond_7_case_0

22:                                               ; preds = %9
  %23 = extractvalue { i32, {}, { double } } %18, 2
  %24 = extractvalue { double } %23, 0
  br label %cond_7_case_1

cond_7_case_0:                                    ; preds = %20
  %25 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @1, i32 0, i32 0) }, 0
  %26 = extractvalue { i32, i8* } { i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @1, i32 0, i32 0) }, 1
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @prelude.panic_template.1, i32 0, i32 0), i32 %25, i8* %26)
  call void @abort()
  br label %cond_exit_7

cond_7_case_1:                                    ; preds = %22
  br label %cond_exit_7

cond_exit_7:                                      ; preds = %cond_7_case_1, %cond_7_case_0
  %"0.0" = phi double [ 0.000000e+00, %cond_7_case_0 ], [ %24, %cond_7_case_1 ]
  %28 = fadd double %0, %"0.0"
  ret void
}

declare i32 @printf(i8*, ...)

declare void @abort()
